--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
 				<br>
 					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
 					  <li class="ftco-animate normal-txt">Find me on  </li>
-					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/rishabhnmishra/"><span class="icon-linkedin"></span></a></li>  
+					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/sujana-sri-maddela-584b21ab/"><span class="icon-linkedin"></span></a></li>  
 					</ul>
 				<br>
 		   </div>
