--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/drive/u/0/folders/1bluY0AZ8cHlvYFMeo-rydjs6JAyjiKyv" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -566,7 +566,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="#">resumelink</a></p>
+	            <p><a href="https://drive.google.com/drive/u/0/folders/1bluY0AZ8cHlvYFMeo-rydjs6JAyjiKyv">resumelink</a></p>
 	          </div>
           </div>
 
